[package]
name = "yofi"
version = "0.1.5"
authors = ["Kitsu <mail@kitsu.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = { version = "0.11", optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
ttf-parser = { version = "0.15.0", optional = true }

fontdue = { version = "0.7.2", optional = true }
rust-fontconfig = { version = "0.1.5", optional = true }
# Not used directly by yofi. Added to ensure brotli-decompressor is built with std support for rust-fontconfig
brotli-decompressor = { version = "*", optional = true }
encoding_rs = "=0.8.28"


anyhow = "1.0.51"
wayland-protocols = { version = "0.29.1", default-features = false, features = ["unstable_protocols", "client"] }
sctk = { version = "0.15.2", package = "smithay-client-toolkit", features = ["calloop"] }
raqote = { git = "https://github.com/l4l/raqote.git", rev = "82a88bb", default-features = false }
xdg = "2.4.0"
fep = { version = "1.2.0", package = "freedesktop_entry_parser" }
shlex = "1.1.0"
nix = "0.23.0"
log = "0.4.14"
fern = "0.6.0"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
serde = { version = "1.0.131", features = ["derive"] }
toml = "0.5.8"
structopt = "0.3.25"
either = "1.6.1"
png = { version = "0.17.2", default-features = false }
resvg = { version = "0.22.0", default-features = false }
usvg = { version = "0.22.0", default-features = false }
once_cell = "1.8.0"
fzyr = { git = "https://github.com/l4l/fzyr.git", rev = "d5c83e3", default-features = false }
oneshot = { version = "0.1.3", default-features = false, features = ["std"] }
bit-vec = "0.6.3"
itertools = "0.8.2"
nom = { version = "7.1.0", default-features = false, features = ["std"] }
nom-regex = "0.2.0"
regex = "1.5.4"
libc = "0.2.109"
tiny-skia = "0.6.1"
unicode-segmentation = "1.8.0"
levenshtein = "1.0.5"
syslog = "6.0.0"
defaults = "0.2.0"
freedesktop-icon-lookup = "0.1.0"

[profile.release-lto]
lto = true
inherits = "release"

[features]
default = ["font-fontdue"]
font-fontdue = ["fontdue", "rust-fontconfig", "brotli-decompressor"]
font-fontkit = ["font-kit", "pathfinder_geometry", "raqote/text", "ttf-parser"]

[dev-dependencies]
test-case = "1.2.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
