[package]
name = "yofi"
version = "0.2.0"
authors = ["Kitsu <mail@kitsu.me>"]
edition = "2021"

description = "minimalistic menu for wayland"
repository = "https://github.com/l4l/yofi"
license = "MIT"
keywords = ["application-launcher", "menu", "wayland", "wlroots-based-menu", "dmenu-replacement"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.7.2"
fontconfig = { version = "0.5.0", features = ["dlopen"] }

anyhow = "1.0.51"
wayland-protocols = { version = "0.29.5", default-features = false, features = ["unstable_protocols", "client"] }
sctk = { version = "0.16.0", package = "smithay-client-toolkit", features = ["calloop"] }
raqote = { version = "0.8.1", default-features = false }
xdg = "2.4.0"
fep = { version = "1.3.0", package = "freedesktop_entry_parser" }
shlex = "1.1.0"
nix = "0.24.2"
log = "0.4.14"
fern = "0.6.0"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
serde = { version = "1.0.131", features = ["derive"] }
toml = "0.5.8"
structopt = "0.3.25"
either = "1.6.1"
png = { version = "0.17.6", default-features = false }
resvg = { version = "0.23.0", default-features = false }
usvg = { version = "0.23.0", default-features = false }
once_cell = "1.15.0"
oneshot = { version = "0.1.5", default-features = false, features = ["std"] }
itertools = "0.8.2"
nom = { version = "7.1.0", default-features = false, features = ["std"] }
nom-regex = "0.2.0"
regex = "1.6.0"
libc = "0.2.109"
tiny-skia = "0.6.1"
unicode-segmentation = "1.10.0"
levenshtein = "1.0.5"
syslog = "6.0.0"
defaults = "0.2.0"
freedesktop-icon-lookup = "0.1.0"
sublime_fuzzy = "0.7.0"
keyframe = "1.1.1"

[profile.release-lto]
lto = true
inherits = "release"

[dev-dependencies]
test-case = "1.2.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
