[package]
name = "yofi"
version = "0.2.0"
authors = ["Kitsu <mail@kitsu.me>"]
edition = "2021"

description = "minimalistic menu for wayland"
repository = "https://github.com/l4l/yofi"
license = "MIT"
keywords = ["application-launcher", "menu", "wayland", "wlroots-based-menu", "dmenu-replacement"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-lto]
lto = true
inherits = "release"

[dependencies]
anyhow = "1.0.80"
argh = "0.1.12"
defaults = "0.2.0"
either = "1.10.0"
fep = { version = "1.3.0", package = "freedesktop_entry_parser" }
fern = { version = "0.6.2", features = ["syslog-6"] }
fontconfig = { version = "0.8.0", features = ["dlopen"] }
fontdue = "0.8.0"
freedesktop-icon-lookup = "0.1.3"
humantime = "2.1.0"
itertools = "0.12.1"
levenshtein = "1.0.5"
libc = "0.2.153"
log = "0.4.21"
nix = { version = "0.28.0", features = ["fs", "process"] }
nom = { version = "7.1.3", default-features = false, features = ["std"] }
once_cell = "1.19.0"
oneshot = { version = "0.1.6", default-features = false, features = ["std"] }
png = { version = "0.17.13", default-features = false }
raqote = { version = "0.8.3", default-features = false }
regex = { version = "1.10.3", default-features = false, features = ["std", "perf-inline"] }
resvg = { version = "0.40.0", default-features = false }
sctk = { version = "0.18.1", package = "smithay-client-toolkit", features = ["calloop"] }
serde = { version = "1.0.197", features = ["derive"] }
shlex = "1.3.0"
sublime_fuzzy = "0.7.0"
syslog = "6.1.0"
toml = { version = "0.8.10", default-features = false, features = ["parse"] }
unicode-segmentation = "1.11.0"
xdg = "2.5.2"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"
test-case = "3.3.1"
